--- a/ProAgil-App/src/app/app.component.html
+++ b/ProAgil-App/src/app/app.component.html
@@ -1,9 +1,12 @@
+<app-nav></app-nav>
 
-<div class="container text-center">
+<div class="container">
   
-    <h1>{{ title }} app is running!</h1>
+    <h1>{{ title }}!</h1>
 
     <app-eventos></app-eventos>
 </div>
+
+
 
 <router-outlet></router-outlet>
