--- a/ProAgil-App/src/app/eventos/eventos.component.html
+++ b/ProAgil-App/src/app/eventos/eventos.component.html
@@ -24,7 +24,7 @@
     <tbody *ngIf="eventos && eventos.length">
         <tr *ngFor = "let evento of eventosFiltrados">
             <td>
-                <img *ngIf = "mostrarImagem" src="http://localhost:5000/img/{{evento.imagemUrl}}"
+                <img *ngIf = "mostrarImagem" src="http://localhost:5000/img/{{evento.imagemURL}}"
                 [style.width.px] = "imagemLargura"
                 [style.margin.px] = "imagemMargem">
             </td>
