--- a/ProAgil-App/src/app/eventos/eventos.component.html
+++ b/ProAgil-App/src/app/eventos/eventos.component.html
@@ -10,7 +10,9 @@
         <tr>
             <th>
                 <button class="btn btn-outline-primary"
-                (click) = "alterarImagem()">Mostrar Imagem</button>
+                (click) = "alterarImagem()">
+                <i class="{{mostrarImagem ? 'fa fa-eye-slash' : 'fa fa-eye'}}"></i>
+                {{mostrarImagem ? 'ocultar' : 'mostrar'}} Imagem</button>
             </th>
             <th>#</th>
             <th>Tema</th>
@@ -21,26 +23,33 @@
             <th>Opções</th>
         </tr>
     </thead>
-    <tbody *ngIf="eventos && eventos.length">
+    <tbody *ngIf="eventos">
         <tr *ngFor = "let evento of eventosFiltrados">
             <td>
                 <img *ngIf = "mostrarImagem" src="http://localhost:5000/img/{{evento.imagemURL}}"
                 [style.width.px] = "imagemLargura"
                 [style.margin.px] = "imagemMargem">
             </td>
-            <td>{{evento.eventoId}}</td>
+            <td>{{evento.id}}</td>
             <td>{{evento.tema}}</td>
             <td>{{evento.local}}</td>
             <td>{{evento.dataEvento}}</td>
-            <td>{{evento.qntPessoas}}</td>
-            <td>{{evento.lote | uppercase}}</td>
+            <td>{{evento.qtdPessoas}}</td>
+            <td>
+                <div *ngIf="!evento.lotes">
+                    não informado
+                </div>
+                <div *ngIf="evento.lotes">
+                    {{evento.lotes[0].nome | uppercase}}
+                </div>
+            </td>
             <td>
                 <button class="btn btn-success"></button>
                 <button class="btn btn-danger"></button>
             </td>
         </tr>
     </tbody>
-    <tfoot *ngIf="!eventosFiltrados.length">
+    <tfoot *ngIf="!eventosFiltrados">
         <tr>
             <td colspan="8" class="text-center">
                 <h4>Nenhum evento encontrado</h4>
