--- a/ProAgil-App/src/app/eventos/eventos.component.html
+++ b/ProAgil-App/src/app/eventos/eventos.component.html
@@ -1,60 +1,302 @@
-<div class="form-inline">
+<div class="d-flex">
+  <div class="form-inline mr-auto">
     <div class="form-group mb-2">
-        <label class="mr-2">Filtro:</label><input type="text" class="form-control mr-2" placeholder="Buscar"
-        [(ngModel)] = "filtroLista">
+      <label class="mr-2">Filtro:</label
+      ><input
+        type="text"
+        class="form-control mr-2"
+        placeholder="Buscar"
+        [(ngModel)]="filtroLista"
+      />
     </div>
+  </div>
+  <div>
+      <button class="btn btn-outline-primary" (click)="OpenModal(template)">
+        <i class="fa fa-plus-circle"></i>&nbsp;  
+        Novo Evento</button>
+  </div>
 </div>
-<h3>Filtro: {{filtroLista}}</h3>
+<h3>Filtro: {{ filtroLista }}</h3>
 <table class="table table-striped">
-    <thead class="thead-light">
-        <tr>
-            <th>
-                <button class="btn btn-outline-primary"
-                (click) = "alterarImagem()">
-                <i class="{{mostrarImagem ? 'fa fa-eye-slash' : 'fa fa-eye'}}"></i>
-                {{mostrarImagem ? 'ocultar' : 'mostrar'}} Imagem</button>
-            </th>
-            <th>#</th>
-            <th>Tema</th>
-            <th>Local</th>
-            <th>Data</th>
-            <th>Qtd Pessoas</th>
-            <th>Lote</th>
-            <th>Opções</th>
-        </tr>
-    </thead>
-    <tbody *ngIf="eventos">
-        <tr *ngFor = "let evento of eventosFiltrados">
-            <td>
-                <img *ngIf = "mostrarImagem" src="http://localhost:5000/img/{{evento.imagemURL}}"
-                [style.width.px] = "imagemLargura"
-                [style.margin.px] = "imagemMargem">
-            </td>
-            <td>{{evento.id}}</td>
-            <td>{{evento.tema}}</td>
-            <td>{{evento.local}}</td>
-            <td>{{evento.dataEvento}}</td>
-            <td>{{evento.qtdPessoas}}</td>
-            <td>
-                <div *ngIf="!evento.lotes">
-                    não informado
-                </div>
-                <div *ngIf="evento.lotes">
-                    {{evento.lotes[0].nome | uppercase}}
-                </div>
-            </td>
-            <td>
-                <button class="btn btn-success"></button>
-                <button class="btn btn-danger"></button>
-            </td>
-        </tr>
-    </tbody>
-    <tfoot *ngIf="!eventosFiltrados">
-        <tr>
-            <td colspan="8" class="text-center">
-                <h4>Nenhum evento encontrado</h4>
-            </td>
-        </tr>
-    </tfoot>
+  <thead class="thead-light">
+    <tr>
+      <th>
+        <button class="btn btn-outline-primary" (click)="alterarImagem()">
+          <i class="{{ mostrarImagem ? 'fa fa-eye-slash' : 'fa fa-eye' }}"></i>
+          {{ mostrarImagem ? "ocultar" : "mostrar" }} Imagem
+        </button>
+      </th>
+      <th>#</th>
+      <th>Tema</th>
+      <th>Local</th>
+      <th>Data</th>
+      <th>Qtd Pessoas</th>
+      <th>Lote</th>
+      <th>Opções</th>
+    </tr>
+  </thead>
+  <tbody *ngIf="eventos">
+    <tr *ngFor="let evento of eventosFiltrados">
+      <td>
+        <img
+          *ngIf="mostrarImagem"
+          src="http://localhost:5000/img/{{ evento.imagemURL }}"
+          [style.width.px]="imagemLargura"
+          [style.margin.px]="imagemMargem"
+        />
+      </td>
+      <td>{{ evento.id }}</td>
+      <td>{{ evento.tema }}</td>
+      <td>{{ evento.local }}</td>
+      <td>{{ evento.dataEvento | DateTimeFormat }}</td>
+      <td>{{ evento.qntPessoas }}</td>
+      <td>
+        <div *ngIf="!evento.lotes">não informado</div>
+        <div *ngIf="evento.lotes">
+          {{ evento.lotes[0].nome | uppercase }}
+        </div>
+      </td>
+      <td>
+        <div class="btn-group">
+          <button
+            class="btn btn-sm btn-success"
+            tooltip="Editar"
+            (click)="OpenModal(template)"
+          >
+            <i class="fa fa-edit"></i>
+          </button>
+          <button class="btn btn-sm btn-danger" tooltip="Excluir">
+            <i class="fa fa-eraser"></i>
+          </button>
+        </div>
+      </td>
+    </tr>
+  </tbody>
+  <tfoot *ngIf="!eventosFiltrados">
+    <tr>
+      <td colspan="8" class="text-center">
+        <h4>Nenhum evento encontrado</h4>
+      </td>
+    </tr>
+  </tfoot>
 </table>
 
+<div
+  bsModal
+  #template="bs-modal"
+  class="modal fade"
+  tabindex="-1"
+  role="dialog"
+  aria-labelledby="dialog-sizes-name1"
+>
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 id="dialog-sizes-name1" class="modal-title pull-left">
+          Evento
+        </h4>
+        <button
+          type="button"
+          class="close pull-right"
+          (click)="template.hide()"
+          aria-label="Close"
+        >
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <form class="modal-body">
+        <div [formGroup]="registerForm">
+          <div class="form-row">
+            <div class="form-group col-md-12">
+              <label>Tema</label>
+              <input
+                type="text"
+                class="form-control"
+                [ngClass]="{
+                  'is-invalid':
+                    registerForm.get('tema').errors &&
+                    registerForm.get('tema').touched
+                }"
+                formControlName="tema"
+                placeholder="Insira o tema"
+              />
+              <div
+                *ngIf="
+                  registerForm.get('tema').hasError('required') &&
+                  registerForm.get('tema').touched
+                "
+                class="invalid-feedback"
+              >
+                Tema é obrigatório
+              </div>
+              <div
+                *ngIf="
+                  registerForm.get('tema').hasError('minlength') &&
+                  registerForm.get('tema').touched
+                "
+                class="invalid-feedback"
+              >
+                Tema deve ter no mínimo 4 caracteres
+              </div>
+              <div
+                *ngIf="
+                  registerForm.get('tema').hasError('maxlength') &&
+                  registerForm.get('tema').touched
+                "
+                class="invalid-feedback"
+              >
+                Tema deve ter no máximo 50 caracteres
+              </div>
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-8">
+              <label>Local</label>
+              <input
+                type="text"
+                class="form-control"
+                [ngClass]="{
+                  'is-invalid':
+                    registerForm.get('local').errors &&
+                    registerForm.get('local').touched
+                }"
+                formControlName="local"
+                placeholder="Insira o local"
+              />
+              <div class="invalid-feedback">Local é obrigatório</div>
+            </div>
+            <div class="form-group col-md-4">
+              <label>Data e Hora</label>
+              <input
+                type="text"
+                class="form-control"
+                bsDatepicker
+                [bsConfig]="{ dateInputFormat: 'DD/MM/YYYY HH:MM a' }"
+                [ngClass]="{
+                  'is-invalid':
+                    registerForm.get('dataEvento').errors &&
+                    registerForm.get('dataEvento').touched
+                }"
+                formControlName="dataEvento"
+              />
+              <div class="invalid-feedback">Data e hora é obrigatório</div>
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-3">
+              <label>Qnt Pessoas</label>
+              <input
+                type="text"
+                class="form-control"
+                [ngClass]="{
+                  'is-invalid':
+                    registerForm.get('qntPessoas').errors &&
+                    registerForm.get('qntPessoas').touched
+                }"
+                formControlName="qntPessoas"
+                placeholder="Insira a quantidade de pessoas"
+              />
+              <div
+                *ngIf="
+                  registerForm.get('qntPessoas').hasError('required') &&
+                  registerForm.get('qntPessoas').touched
+                "
+                class="invalid-feedback"
+              >
+                Quantidade de pessoas é obrigatório
+              </div>
+              <div
+                *ngIf="
+                  registerForm.get('qntPessoas').hasError('max') &&
+                  registerForm.get('qntPessoas').touched
+                "
+                class="invalid-feedback"
+              >
+                Quantidade de pessoas deve ser menor que 120000
+              </div>
+            </div>
+
+            <div class="form-group col-md-9">
+              <label>Imagem</label>
+              <input
+                type="text"
+                class="form-control"
+                [ngClass]="{
+                  'is-invalid':
+                    registerForm.get('imagemURL').errors &&
+                    registerForm.get('imagemURL').touched
+                }"
+                formControlName="imagemURL"
+                placeholder="Insira a imagem"
+              />
+              <div class="invalid-feedback">Imagem é obrigatória</div>
+            </div>
+          </div>
+
+          <div class="form-row">
+            <div class="form-group col-md-4">
+              <label>Telefone</label>
+              <input
+                type="text"
+                class="form-control"
+                [ngClass]="{
+                  'is-invalid':
+                    registerForm.get('telefone').errors &&
+                    registerForm.get('telefone').touched
+                }"
+                formControlName="telefone"
+                placeholder="Insira o telefone"
+              />
+              <div class="invalid-feedback">Telefone é obrigatório</div>
+            </div>
+            <div class="form-group col-md-8">
+              <label>Email</label>
+              <input
+                type="text"
+                class="form-control"
+                [ngClass]="{
+                  'is-invalid':
+                    registerForm.get('email').errors &&
+                    registerForm.get('email').touched
+                }"
+                formControlName="email"
+                placeholder="Insira o email"
+              />
+              <div
+                *ngIf="
+                  registerForm.get('email').hasError('required') &&
+                  registerForm.get('email').touched
+                "
+                class="invalid-feedback"
+              >
+                Email é obrigatório
+              </div>
+              <div
+                *ngIf="
+                  registerForm.get('email').hasError('email') &&
+                  registerForm.get('email').touched
+                "
+                class="invalid-feedback"
+              >
+                Email inválido
+              </div>
+            </div>
+          </div>
+        </div>
+       
+      </form>
+      <div class="modal-footer d-flex">
+        <button class="btn btn-secondary" (click)="template.hide()">
+            Fechar
+          </button>
+          <button
+            class="btn btn-primary ml-auto"
+            [disabled]="!registerForm.valid"
+            (click)="salvarAlteracao()"
+          >
+            Salvar alterações
+          </button>
+      </div>
+    </div>
+  </div>
+</div>
