--- a/ProAgil-App/src/app/eventos/eventos.component.html
+++ b/ProAgil-App/src/app/eventos/eventos.component.html
@@ -11,7 +11,7 @@
     </div>
   </div>
   <div>
-      <button class="btn btn-outline-primary" (click)="OpenModal(template)">
+      <button class="btn btn-outline-primary" (click)="novoEvento(template)">
         <i class="fa fa-plus-circle"></i>&nbsp;  
         Novo Evento</button>
   </div>
@@ -61,11 +61,12 @@
           <button
             class="btn btn-sm btn-success"
             tooltip="Editar"
-            (click)="OpenModal(template)"
+            (click)="editarEvento(evento, template)"
           >
             <i class="fa fa-edit"></i>
           </button>
-          <button class="btn btn-sm btn-danger" tooltip="Excluir">
+          <button class="btn btn-sm btn-danger" tooltip="Excluir"
+          (click)="excluirEvento(evento, confirm)">
             <i class="fa fa-eraser"></i>
           </button>
         </div>
@@ -296,6 +297,32 @@
           >
             Salvar alterações
           </button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div bsModal #confirm="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="dialog-sizes-name1">
+  <div class="modal-dialog modal-sm">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title pull-left">
+          Deletando Evento
+        </h4>
+        <button type="button" class="close pull-right" (click)="confirm.hide()" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>{{bodyDeletarEvento}}</p>
+      </div>
+      <div class="modal-footer btn-group d-flex">
+        <button type="button" class="btn btn-outline-primary" (click)="confirm.hide()">
+          CENCELAR
+        </button>
+        <button type="button" class="btn btn-outline-danger" (click)="ConfirmDelete(confirm)">
+          DELETAR
+        </button>
       </div>
     </div>
   </div>
