--- a/ProAgil-App/src/app/eventos/eventos.component.html
+++ b/ProAgil-App/src/app/eventos/eventos.component.html
@@ -1,3 +1,4 @@
+<app-titulo [titulo]="titulo"></app-titulo>
 <div class="d-flex">
   <div class="form-inline mr-auto">
     <div class="form-group mb-2">
@@ -51,13 +52,13 @@
       <td>{{ evento.dataEvento | DateTimeFormat }}</td>
       <td>{{ evento.qntPessoas }}</td>
       <td>
-        <div *ngIf="!evento.lotes">não informado</div>
-        <div *ngIf="evento.lotes">
+        <div *ngIf="!evento.lotes.length">não informado</div>
+        <div *ngIf="evento.lotes.length">
           {{ evento.lotes[0].nome | uppercase }}
         </div>
       </td>
       <td>
-        <div class="btn-group">
+        <div class="btn-group"> 
           <button
             class="btn btn-sm btn-success"
             tooltip="Editar"
@@ -172,13 +173,16 @@
                 type="text"
                 class="form-control"
                 bsDatepicker
-                [bsConfig]="{ dateInputFormat: 'DD/MM/YYYY HH:MM a' }"
+                formControlName="dataEvento"
+                value="{{dataEvento | DateTimeFormat}}"
+                [(ngModel)]= "dataEvento"
+                [bsConfig]="{ dateInputFormat: 'DD/MM/YYYY hh:mm' }"
                 [ngClass]="{
                   'is-invalid':
                     registerForm.get('dataEvento').errors &&
                     registerForm.get('dataEvento').touched
                 }"
-                formControlName="dataEvento"
+                
               />
               <div class="invalid-feedback">Data e hora é obrigatório</div>
             </div>
