--- a/ProAgil-App/src/app/nav/nav.component.html
+++ b/ProAgil-App/src/app/nav/nav.component.html
@@ -1,7 +1,7 @@
 
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
   <div class="container">
-    <a class="navbar-brand" href="#">ProAgil Eventos</a>
+    <a class="navbar-brand" routerLink="dashboard">ProAgil Eventos</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -9,13 +9,13 @@
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="#">Eventos</a>
+          <a class="nav-link" routerLink="eventos">Eventos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Palestrantes</a>
+          <a class="nav-link" routerLink="palestrantes">Palestrantes</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contatos</a>
+          <a class="nav-link" routerLink="contatos">Contatos</a>
         </li>
       </ul>
       
