--- a/ProAgil-App/src/app/eventos/eventos.component.html
+++ b/ProAgil-App/src/app/eventos/eventos.component.html
@@ -41,7 +41,7 @@
       <td>
         <img
           *ngIf="mostrarImagem"
-          src="http://localhost:5000/img/{{ evento.imagemURL }}"
+          src="http://localhost:5000/resources/images/{{ evento.imagemURL }}?_ts={{dataAtual}}"
           [style.width.px]="imagemLargura"
           [style.margin.px]="imagemMargem"
         />
@@ -49,7 +49,7 @@
       <td>{{ evento.id }}</td>
       <td>{{ evento.tema }}</td>
       <td>{{ evento.local }}</td>
-      <td>{{ evento.dataEvento | DateTimeFormat }}</td>
+      <td>{{ evento.dataEvento }}</td>
       <td>{{ evento.qntPessoas }}</td>
       <td>
         <div *ngIf="!evento.lotes.length">não informado</div>
@@ -174,7 +174,7 @@
                 class="form-control"
                 bsDatepicker
                 formControlName="dataEvento"
-                value="{{dataEvento | DateTimeFormat}}"
+                value="{{dataEvento | date: 'dd/MM/yyyy hh:mm '}}"
                 [(ngModel)]= "dataEvento"
                 [bsConfig]="{ dateInputFormat: 'DD/MM/YYYY hh:mm' }"
                 [ngClass]="{
@@ -223,17 +223,24 @@
 
             <div class="form-group col-md-9">
               <label>Imagem</label>
-              <input
-                type="text"
-                class="form-control"
-                [ngClass]="{
-                  'is-invalid':
-                    registerForm.get('imagemURL').errors &&
-                    registerForm.get('imagemURL').touched
-                }"
-                formControlName="imagemURL"
-                placeholder="Insira a imagem"
-              />
+              <table>
+                <tr>
+                  <td> <button class="btn btn-success" (click)="file.click()">Enviar imagem</button>
+                    <input
+                      type="file" #file
+                      class="form-control"
+                      [ngClass]="{
+                        'is-invalid':
+                          registerForm.get('imagemURL').errors &&
+                          registerForm.get('imagemURL').touched
+                      }" (change)="onFileChange($event)"
+                      formControlName="imagemURL"
+                      placeholder="Insira a imagem"
+                      style="display: none;"
+                    /></td>
+                </tr>
+              </table>
+             
               <div class="invalid-feedback">Imagem é obrigatória</div>
             </div>
           </div>
